fix: Fix GH-594 and GH-727 Bring non-namespaced css selectors under .form-wrap.form-builder. Consolidate two definitions for .toggle-form.

--- a/src/sass/_stage.scss
+++ b/src/sass/_stage.scss
@@ -370,8 +370,13 @@
 
     .toggle-form {
       &:hover {
+        border-color: lighten($grey, 40%);
         background-color: $edit;
         color: $white;
+      }
+
+      &::before {
+        margin: 0;
       }
     }
 
